fixed alignment

--- a/image/image.css
+++ b/image/image.css
@@ -61,6 +61,10 @@ nav>a {
 }
 
 .container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     border: 1px solid white;
     padding: 5rem;
     margin-top: 1rem;
@@ -78,13 +82,17 @@ nav>a {
     font-weight: bold;
 }
 
-.line {
-    width: 35%;
-    display: block;
-    margin: 0;
-    border: 1px solid #ffffff;
-    margin-top: 1rem;
-    margin-bottom: 2rem;
+.section-heading {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 2.5rem;
+    padding: 1rem 0 3rem 0;
+}
+
+.section-heading>hr {
+    width: 45%;
 }
 
 table {
@@ -259,6 +267,11 @@ p {
 }
 
 /* sources */
+
+.sources {
+    width: 80%;
+    text-align: center;
+}
 
 .links {
     display: flex;
